# IBAMR

./: .gitignore  IIMethod_interface.cpp  libmesh_utilities_qi.h:Zone.Identifier
examples/IIM/divided_tube/: CMakeCache.txt  CMakeLists.txt  C_F_D.curve  C_F_L.curve  Makefile  cmake_install.cmake  example.cpp  input2d  meshOutput2d.e  straightline.msh
examples/IIM/divided_tube/no_phong/: dumps.visit  output.ex2
examples/IIM/divided_tube/no_phong/visit_dump.00000/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00064/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00128/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00192/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00256/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00320/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00384/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00448/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/no_phong/visit_dump.00512/: processor_cluster.00000.samrai  summary.samrai
examples/IIM/divided_tube/old/: dumps.visit  output.ex2
examples/IIM/phong_with_utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  phong.cpp  phong2d  phong3d  sphereGmesh2.msh
examples/IIM/taylor-couette/: CMakeLists.txt
examples/IIM/testing-boost/: CMakeCache.txt  CMakeLists.txt  Makefile  boost2d  boost3d  cmake_install.cmake  testingboost.cpp
(+2423 files in other folders)
